# unrepair

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: test_real_wheel.sh
src/: lib.rs  main.rs  report.rs  wheel.rs
src/compare/: symbols.rs
src/elf/: mod.rs  soname.rs  symbols.rs  versioning.rs
src/patch/: mod.rs
tests/: unrepair_integration.rs
tests/fixtures/src/: test_ext.c  test_lib_v1.c  test_lib_v2_compat.c  test_lib_v2_incompat.c  test_lib_v2_sig_incompat.c
