[package]
name = "unrepair"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lief = "0.17.3"

[dev-dependencies]
tempfile = "3"
